Fix contact form spacing

--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -25,7 +25,7 @@
     margin-bottom: 20px
 
     @media screen and (max-width: $break-small)
-      font-size: 14px
+      margin-bottom: 10px
 
   .contact-name, .contact-recaptcha, .contact-send, .contact-email
     display: block
